--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "nx-admin",
+  "name": "fubukianime_vue",
   "version": "3.6.0",
   "license": "MIT",
   "description": "A vue admin template with Element UI & axios & iconfont & permission control & lint",
-  "author": "nxmin <392716797@qq.com>",
+  "author": "fubukianime_vue <1337189880@qq.com>",
   "scripts": {
     "dev": "vue-cli-service serve",
     "build:prod": "vue-cli-service build",
@@ -29,10 +29,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mgbq/nx-admin.git"
+    "url": "git+https://github.com/MikazukiFubuki/fubukianime_vue.git"
   },
   "bugs": {
-    "url": "https://github.com/mgbq/nx-admin/issues"
+    "url": ""
   },
   "dependencies": {
     "axios": "0.18.1",
